examples/errors/oop_invalid_constructor_args.vut
class Student(name) {
}

let s = Student()
